--- a/result/2020-02-20 15_14_20_result.html
+++ b/result/2020-02-20 15_14_20_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-19 14:03:20</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:31.853255</p>
-<p class='attribute'><strong>状态:</strong> 通过 14 失败 1</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 15:14:20</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:21.347587</p>
+<p class='attribute'><strong>状态:</strong> 通过 20 失败 1</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -242,32 +242,22 @@
 
     <tr class='failClass'>
         <td>case.case_children_info.ChildrenInfoTest</td>
-        <td>5</td>
-        <td>4</td>
+        <td>3</td>
+        <td>2</td>
         <td>1</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c2',5)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c2',3)">详情</a></td>
     </tr>
 
-<tr id='pt2.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_info_edit</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='pt2.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_info_confirm</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='ft2.3' class='none'>
-    <td class='failCase'><div class='testcase'>test_next_step_with_correct_id</div></td>
+<tr id='ft2.1' class='none'>
+    <td class='failCase'><div class='testcase'>test_edit_child_info_by_id</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.3')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.1')" >
         失败</a>
-    <div id='div_ft2.3' class="popup_window">
-        <pre>ft2.3: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 41, in test_next_step_with_correct_id
+    <div id='div_ft2.1' class="popup_window">
+        <pre>ft2.1: Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 40, in test_edit_child_info_by_id
     self.assertTrue(rj == "success")
 AssertionError: False is not true
 </pre>
@@ -276,14 +266,191 @@ AssertionError: False is not true
     </td>
 </tr>
 
-<tr id='pt2.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_next_step_with_invalid_id</div></td>
+<tr id='pt2.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_info_confirm</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt2.5' class='hiddenRow'>
+<tr id='pt2.3' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_parents_fill_edit</div></td>
     <td colspan='5' align='center'>通过</td>
+</tr>
+
+    <tr class='passClass'>
+        <td>case.case_login.LoginTest</td>
+        <td>12</td>
+        <td>12</td>
+        <td>0</td>
+        <td>0</td>
+        <td><a href="javascript:showClassDetail('c3',12)">详情</a></td>
+    </tr>
+
+<tr id='pt3.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.1')" >
+        通过</a>
+    <div id='div_pt3.1' class="popup_window">
+        <pre>pt3.1: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.2')" >
+        通过</a>
+    <div id='div_pt3.2' class="popup_window">
+        <pre>pt3.2: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.3' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.3')" >
+        通过</a>
+    <div id='div_pt3.3' class="popup_window">
+        <pre>pt3.3: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.4' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.4')" >
+        通过</a>
+    <div id='div_pt3.4' class="popup_window">
+        <pre>pt3.4: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.5')" >
+        通过</a>
+    <div id='div_pt3.5' class="popup_window">
+        <pre>pt3.5: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_validation_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.6')" >
+        通过</a>
+    <div id='div_pt3.6' class="popup_window">
+        <pre>pt3.6: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.7' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.7')" >
+        通过</a>
+    <div id='div_pt3.7' class="popup_window">
+        <pre>pt3.7: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.8' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.8')" >
+        通过</a>
+    <div id='div_pt3.8' class="popup_window">
+        <pre>pt3.8: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.9' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.9')" >
+        通过</a>
+    <div id='div_pt3.9' class="popup_window">
+        <pre>pt3.9: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.10' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.10')" >
+        通过</a>
+    <div id='div_pt3.10' class="popup_window">
+        <pre>pt3.10: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.11' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.11')" >
+        通过</a>
+    <div id='div_pt3.11' class="popup_window">
+        <pre>pt3.11: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt3.12' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_validation_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.12')" >
+        通过</a>
+    <div id='div_pt3.12' class="popup_window">
+        <pre>pt3.12: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
     <tr class='passClass'>
@@ -292,88 +459,23 @@ AssertionError: False is not true
         <td>2</td>
         <td>0</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c3',2)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c4',2)">详情</a></td>
     </tr>
 
-<tr id='pt3.1' class='hiddenRow'>
+<tr id='pt4.1' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt3.2' class='hiddenRow'>
+<tr id='pt4.2' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list_by_address_Id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-    <tr class='passClass'>
-        <td>case.case_login.LoginTest</td>
-        <td>4</td>
-        <td>4</td>
-        <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c4',4)">详情</a></td>
-    </tr>
-
-<tr id='pt4.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.1')" >
-        通过</a>
-    <div id='div_pt4.1' class="popup_window">
-        <pre>pt4.1: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt4.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.2')" >
-        通过</a>
-    <div id='div_pt4.2' class="popup_window">
-        <pre>pt4.2: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt4.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.3')" >
-        通过</a>
-    <div id='div_pt4.3' class="popup_window">
-        <pre>pt4.3: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt4.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.4')" >
-        通过</a>
-    <div id='div_pt4.4' class="popup_window">
-        <pre>pt4.4: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
         <tr id='total_row'>
             <td>总计</td>
-            <td>15</td>
-            <td>14</td>
+            <td>21</td>
+            <td>20</td>
             <td>1</td>
             <td>0</td>
             <td>&nbsp;</td>
@@ -408,7 +510,7 @@ AssertionError: False is not true
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:14, name:'通过'},
+                        {value:20, name:'通过'},
                         {value:1, name:'失败'},
                         {value:0, name:'错误'}
                     ],
