--- a/result/2020-02-20 14_13_50_result.html
+++ b/result/2020-02-20 14_13_50_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-19 13:52:17</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:06.984459</p>
-<p class='attribute'><strong>状态:</strong> 通过 14</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 14:13:50</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:38.041218</p>
+<p class='attribute'><strong>状态:</strong> 通过 15 失败 2</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -240,18 +240,30 @@
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-    <tr class='passClass'>
+    <tr class='failClass'>
         <td>case.case_children_info.ChildrenInfoTest</td>
-        <td>4</td>
-        <td>4</td>
+        <td>5</td>
+        <td>3</td>
+        <td>2</td>
         <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c2',4)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c2',5)">详情</a></td>
     </tr>
 
-<tr id='pt2.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_info_edit</div></td>
-    <td colspan='5' align='center'>通过</td>
+<tr id='ft2.1' class='none'>
+    <td class='failCase'><div class='testcase'>test_edit_child_info_by_id</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.1')" >
+        失败</a>
+    <div id='div_ft2.1' class="popup_window">
+        <pre>ft2.1: Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 35, in test_edit_child_info_by_id
+    self.assertTrue(rj == "success")
+AssertionError: False is not true
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
 <tr id='pt2.2' class='hiddenRow'>
@@ -259,12 +271,29 @@
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt2.3' class='hiddenRow'>
+<tr id='ft2.3' class='none'>
+    <td class='failCase'><div class='testcase'>test_next_step_with_correct_id</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.3')" >
+        失败</a>
+    <div id='div_ft2.3' class="popup_window">
+        <pre>ft2.3: Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 54, in test_next_step_with_correct_id
+    self.assertTrue(rj == "success")
+AssertionError: False is not true
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.4' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_next_step_with_invalid_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt2.4' class='hiddenRow'>
+<tr id='pt2.5' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_parents_fill_edit</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
@@ -290,11 +319,11 @@
 
     <tr class='passClass'>
         <td>case.case_login.LoginTest</td>
-        <td>4</td>
-        <td>4</td>
+        <td>6</td>
+        <td>6</td>
         <td>0</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c4',4)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c4',6)">详情</a></td>
     </tr>
 
 <tr id='pt4.1' class='hiddenRow'>
@@ -340,7 +369,7 @@
 </tr>
 
 <tr id='pt4.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
     <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.4')" >
@@ -353,11 +382,39 @@
     </td>
 </tr>
 
+<tr id='pt4.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.5')" >
+        通过</a>
+    <div id='div_pt4.5' class="popup_window">
+        <pre>pt4.5: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt4.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_validation_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.6')" >
+        通过</a>
+    <div id='div_pt4.6' class="popup_window">
+        <pre>pt4.6: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
         <tr id='total_row'>
             <td>总计</td>
-            <td>14</td>
-            <td>14</td>
-            <td>0</td>
+            <td>17</td>
+            <td>15</td>
+            <td>2</td>
             <td>0</td>
             <td>&nbsp;</td>
         </tr>
@@ -391,8 +448,8 @@
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:14, name:'通过'},
-                        {value:0, name:'失败'},
+                        {value:15, name:'通过'},
+                        {value:2, name:'失败'},
                         {value:0, name:'错误'}
                     ],
                     itemStyle: {
