--- a/result/2020-02-20 16_13_13_result.html
+++ b/result/2020-02-20 16_13_13_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 15:14:20</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:21.347587</p>
-<p class='attribute'><strong>状态:</strong> 通过 20 失败 1</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 16:13:13</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:36.820582</p>
+<p class='attribute'><strong>状态:</strong> 通过 21 失败 2</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -242,11 +242,11 @@
 
     <tr class='failClass'>
         <td>case.case_children_info.ChildrenInfoTest</td>
+        <td>5</td>
         <td>3</td>
         <td>2</td>
-        <td>1</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c2',3)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c2',5)">详情</a></td>
     </tr>
 
 <tr id='ft2.1' class='none'>
@@ -257,7 +257,7 @@
         失败</a>
     <div id='div_ft2.1' class="popup_window">
         <pre>ft2.1: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 40, in test_edit_child_info_by_id
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 36, in test_edit_child_info_by_id
     self.assertTrue(rj == "success")
 AssertionError: False is not true
 </pre>
@@ -271,7 +271,29 @@ AssertionError: False is not true
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt2.3' class='hiddenRow'>
+<tr id='ft2.3' class='none'>
+    <td class='failCase'><div class='testcase'>test_next_step_with_correct_id</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.3')" >
+        失败</a>
+    <div id='div_ft2.3' class="popup_window">
+        <pre>ft2.3: Traceback (most recent call last):
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 54, in test_next_step_with_correct_id
+    self.assertTrue(rj == "success")
+AssertionError: False is not true
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.4' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_next_step_with_invalid_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt2.5' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_parents_fill_edit</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
@@ -474,9 +496,9 @@ AssertionError: False is not true
 
         <tr id='total_row'>
             <td>总计</td>
+            <td>23</td>
             <td>21</td>
-            <td>20</td>
-            <td>1</td>
+            <td>2</td>
             <td>0</td>
             <td>&nbsp;</td>
         </tr>
@@ -510,8 +532,8 @@ AssertionError: False is not true
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:20, name:'通过'},
-                        {value:1, name:'失败'},
+                        {value:21, name:'通过'},
+                        {value:2, name:'失败'},
                         {value:0, name:'错误'}
                     ],
                     itemStyle: {
