--- a/result/2020-02-20 16_16_46_result.html
+++ b/result/2020-02-20 16_16_46_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 15:05:56</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:08.495956</p>
-<p class='attribute'><strong>状态:</strong> 通过 20 错误 1</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 16:16:46</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:00.343175</p>
+<p class='attribute'><strong>状态:</strong> 通过 12 错误 1</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -241,214 +241,33 @@
 </tr>
 
     <tr class='errorClass'>
-        <td>case.case_children_info.ChildrenInfoTest</td>
-        <td>3</td>
-        <td>2</td>
+        <td>unittest.loader._FailedTest</td>
+        <td>1</td>
+        <td>0</td>
         <td>0</td>
         <td>1</td>
-        <td><a href="javascript:showClassDetail('c2',3)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c2',1)">详情</a></td>
     </tr>
 
 <tr id='ft2.1' class='none'>
-    <td class='errorCase'><div class='testcase'>test_edit_child_info_by_id</div></td>
+    <td class='errorCase'><div class='testcase'>case_children_info</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
     <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.1')" >
         错误</a>
     <div id='div_ft2.1' class="popup_window">
-        <pre>ft2.1: Traceback (most recent call last):
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 34, in test_edit_child_info_by_id
-    LoginTest.login_and_read_policy()
-  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_login.py", line 69, in login_and_read_policy
-    s= requests.sessions();
-TypeError: 'module' object is not callable
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
+        <pre>ft2.1: ImportError: Failed to import test module: case.case_children_info
+Traceback (most recent call last):
+  File "D:\software\install\vs2017\Shared\Python36_64\lib\unittest\loader.py", line 428, in _find_test_path
+    module = self._get_module_from_name(name)
+  File "D:\software\install\vs2017\Shared\Python36_64\lib\unittest\loader.py", line 369, in _get_module_from_name
+    __import__(name)
+  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 13, in &lt;module&gt;
+    from util import ObjectEncoder
+  File "E:\projects\Python\test\kindergarten_pudong\util\ObjectEncoder.py", line 10, in &lt;module&gt;
+    import numpy as np
+ModuleNotFoundError: No module named 'numpy'
 
-<tr id='pt2.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_info_confirm</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='pt2.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_parents_fill_edit</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-    <tr class='passClass'>
-        <td>case.case_login.LoginTest</td>
-        <td>12</td>
-        <td>12</td>
-        <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c3',12)">详情</a></td>
-    </tr>
-
-<tr id='pt3.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.1')" >
-        通过</a>
-    <div id='div_pt3.1' class="popup_window">
-        <pre>pt3.1: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.2')" >
-        通过</a>
-    <div id='div_pt3.2' class="popup_window">
-        <pre>pt3.2: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.3')" >
-        通过</a>
-    <div id='div_pt3.3' class="popup_window">
-        <pre>pt3.3: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.4')" >
-        通过</a>
-    <div id='div_pt3.4' class="popup_window">
-        <pre>pt3.4: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.5' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.5')" >
-        通过</a>
-    <div id='div_pt3.5' class="popup_window">
-        <pre>pt3.5: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.6' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.6')" >
-        通过</a>
-    <div id='div_pt3.6' class="popup_window">
-        <pre>pt3.6: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.7' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.7')" >
-        通过</a>
-    <div id='div_pt3.7' class="popup_window">
-        <pre>pt3.7: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.8' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.8')" >
-        通过</a>
-    <div id='div_pt3.8' class="popup_window">
-        <pre>pt3.8: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.9' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.9')" >
-        通过</a>
-    <div id='div_pt3.9' class="popup_window">
-        <pre>pt3.9: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.10' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.10')" >
-        通过</a>
-    <div id='div_pt3.10' class="popup_window">
-        <pre>pt3.10: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.11' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.11')" >
-        通过</a>
-    <div id='div_pt3.11' class="popup_window">
-        <pre>pt3.11: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.12' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.12')" >
-        通过</a>
-    <div id='div_pt3.12' class="popup_window">
-        <pre>pt3.12: 测试用例执行完之后的收尾操作=====
 </pre>
     </div>
     <!--css div popup end-->
@@ -461,23 +280,116 @@ TypeError: 'module' object is not callable
         <td>2</td>
         <td>0</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c4',2)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c3',2)">详情</a></td>
     </tr>
 
-<tr id='pt4.1' class='hiddenRow'>
+<tr id='pt3.1' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt4.2' class='hiddenRow'>
+<tr id='pt3.2' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list_by_address_Id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
+    <tr class='passClass'>
+        <td>case.case_login.LoginTest</td>
+        <td>6</td>
+        <td>6</td>
+        <td>0</td>
+        <td>0</td>
+        <td><a href="javascript:showClassDetail('c4',6)">详情</a></td>
+    </tr>
+
+<tr id='pt4.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.1')" >
+        通过</a>
+    <div id='div_pt4.1' class="popup_window">
+        <pre>pt4.1: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt4.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.2')" >
+        通过</a>
+    <div id='div_pt4.2' class="popup_window">
+        <pre>pt4.2: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt4.3' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.3')" >
+        通过</a>
+    <div id='div_pt4.3' class="popup_window">
+        <pre>pt4.3: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt4.4' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.4')" >
+        通过</a>
+    <div id='div_pt4.4' class="popup_window">
+        <pre>pt4.4: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt4.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.5')" >
+        通过</a>
+    <div id='div_pt4.5' class="popup_window">
+        <pre>pt4.5: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt4.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_validation_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.6')" >
+        通过</a>
+    <div id='div_pt4.6' class="popup_window">
+        <pre>pt4.6: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
         <tr id='total_row'>
             <td>总计</td>
-            <td>21</td>
-            <td>20</td>
+            <td>13</td>
+            <td>12</td>
             <td>0</td>
             <td>1</td>
             <td>&nbsp;</td>
@@ -512,7 +424,7 @@ TypeError: 'module' object is not callable
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:20, name:'通过'},
+                        {value:12, name:'通过'},
                         {value:0, name:'失败'},
                         {value:1, name:'错误'}
                     ],
